2021-11-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* vignettes/introduction.md: Converted from Rmd to simplermarkdown
	* DESCRIPTION: Switched VignetteBuilder: to simplermarkdown

2021-08-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* inst/include/spdlog/*: New upstream release spdlog 1.9.2

2021-07-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* inst/include/spdlog/*: New upstream release spdlog 1.9.1

2021-07-21  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Version 0.0.6

	* inst/include/spdlog/*: New upstream spdlog 1.9.0 (with fmt 8.x)

2021-03-28  Dirk Eddelbuettel  <edd@debian.org>

	* docs/mkdmt-src/: Moved mkdocs-material input

2021-03-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Version 0.0.5

2021-03-25  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/spdlog/*: New upstream release spdlog 1.8.4 + 1.8.5

2021-03-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Description): Mention Gabi explicitly
	(URL): List GitHub repo and package pages
	(BugReports): List GitHub issues pages

	* inst/include/spdlog/*: New upstream release spdlog 1.8.3

2020-12-25  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml: Small tweaks to CI YAML file

2020-12-11  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Version 0.0.4

	* inst/include/spdlog/*: New upstream release spdlog 1.8.2

	* .github/workflows/ci.yaml: Add CI runner using r-ci

2020-10-23  Dirk Eddelbuettel  <edd@debian.org>

 	* DESCRIPTION (Version, Date): Version 0.0.3

	* docs/: Added package website
        * docs-src/: Added package website inputs

2020-10-19  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Updated example

2020-10-08  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/introduction.Rmd (vignette): Compile-time example added
