@@ -1,3 +1,7 @@
+2021-11-20  Dirk Eddelbuettel  <edd@debian.org>
+
+	* vignettes/water.css: Added css file
+
 2021-11-19  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll minor version
